# machine-learning-model-example-package

./: .azure-pipelines.yml  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_pkg.ipynb
docs/source/: conf.py  diabete_prediction.rst  index.md  index.rst  modules.rst
src/diabete_prediction/: __init__.py  config.ini  config_loader.py  prepare_data.py  prepare_training_data.py  score_data.py  train_model.py  utils.py
tests/: test_data_preparator.py  test_model_scorer.py  test_model_trainer.py  test_utils.py  unittest_example.ipynb
tmp/: train_model.py
